# equity-fundamental-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: nse_equity_universe.db-shm  nse_equity_universe.db-wal  nse_equity_universe_sample.db  nse_equity_universe_sample.db-shm  schema.sql
sandbox/: data_required_list.xlsx  nse_equity_universe_sample.sql  raw_equity_universe_test.dbcnb
scripts/: run_pipeline.py
src/: fetch_equity_statements.py  fetch_stock_info_v1 (dont use).py  fetch_stock_statements_v1 (dont use).py  fetch_stock_universe_v1 (dont use).py
src/equity_pipeline/: __init__.py  config.py  db.py  equity_pipeline.py  logging_config.py  paths.py  pipeline.py  run_summary.py  runner.py
src/equity_pipeline/ingestion/: equity_info.py  equity_statements.py  equity_universe.py
