[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-pipeline"
version = "0.1.0"
description = "Equity fundamental data pipeline"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
equity-pipeline = "equity_pipeline.pipeline:run"

